--- a/playground/Joachim_Experiment1/Joachim_Experiment1.ioc
+++ b/playground/Joachim_Experiment1/Joachim_Experiment1.ioc
@@ -2,10 +2,11 @@
 FREERTOS.FootprintOK=false
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
 FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=I2C,24,1024,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,1024,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,1024,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;VoltageMeasurem,8,1024,VoltageMeasurement_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=I2C,24,4096,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,4096,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,4096,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;VoltageMeasurem,8,4096,VoltageMeasurement_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=1024
-FREERTOS.configTOTAL_HEAP_SIZE=65536
+FREERTOS.configTOTAL_HEAP_SIZE=70000
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
 I2C1.IPParameters=NoStretchMode,OwnAddress,DualAddressMode,OwnAddress2
 I2C1.NoStretchMode=I2C_NOSTRETCH_ENABLE
@@ -18,9 +19,10 @@ Mcu.IP1=FREERTOS
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -30,7 +32,9 @@ Mcu.Pin11=PB6
 Mcu.Pin12=PB7
 Mcu.Pin13=VP_CRC_VS_CRC
 Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin15=VP_SYS_VS_tim11
+Mcu.Pin15=VP_RTC_VS_RTC_Activate
+Mcu.Pin16=VP_RTC_VS_RTC_Calendar
+Mcu.Pin17=VP_SYS_VS_tim11
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -39,27 +43,28 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=16
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.0
+MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
+NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:false\:false\:true\:false
+NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
 NVIC.TimeBaseIP=TIM11
@@ -142,7 +147,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -183,6 +188,10 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim11.Mode=TIM11
 VP_SYS_VS_tim11.Signal=SYS_VS_tim11
 board=NUCLEO-F411RE
