Added basic I2C interaction. Both devices can be seen using i2cdetect. Added a function debug_print() that prints debug messages to the UART.

--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -10,8 +10,8 @@ GPIO.groupedBy=Group By Peripherals
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
 I2C1.IPParameters=NoStretchMode,OwnAddress,DualAddressMode,OwnAddress2
 I2C1.NoStretchMode=I2C_NOSTRETCH_ENABLE
-I2C1.OwnAddress=40
-I2C1.OwnAddress2=41
+I2C1.OwnAddress=0x40
+I2C1.OwnAddress2=0x41
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=CRC
