--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -24,10 +24,10 @@ Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.0.Mode=DMA_CIRCULAR
+Dma.I2C1_RX.0.Mode=DMA_NORMAL
 Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -37,7 +37,7 @@ Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.1.Mode=DMA_CIRCULAR
 Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
@@ -46,7 +46,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=0
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark2=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark
-FREERTOS.Queues01=I2C_R_Queue,5,i2c_cmd,0,Dynamic,NULL,NULL;RTC_R_Queue,2,i2c_cmd,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=I2C_R_Queue,1,i2c_cmd,0,Dynamic,NULL,NULL;RTC_R_Queue,2,i2c_cmd,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=I2C,24,4096,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,4096,RTC_Task,As weak,NULL,Dynamic,NULL,NULL;StateMachine,8,4096,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;VoltageMeasurem,8,4096,VoltageMeasurement_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=1
@@ -58,7 +58,8 @@ FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
-I2C1.IPParameters=NoStretchMode,OwnAddress,DualAddressMode,OwnAddress2
+I2C1.I2C_Mode=I2C_Fast
+I2C1.IPParameters=NoStretchMode,OwnAddress,DualAddressMode,OwnAddress2,I2C_Mode
 I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
 I2C1.OwnAddress=0x40
 I2C1.OwnAddress2=0x41
