new version with output calibration and heap optimization
this version disables the external interrupt located on the PC13 pin
so you should be aware of this because it disables the bootloader and
replaces the functionallity of the pin with the RTC output calibration (512Hz)

--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -45,8 +45,8 @@ Dma.RequestsNb=2
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=0
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark2=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark
-FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;LED_R_Queue,16,LED_QueueMsg_t*,0,Dynamic,NULL,NULL;Test_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark,configUSE_TICKLESS_IDLE
+FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,2,Task_Data,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;LED_R_Queue,16,LED_QueueMsg_t*,0,Dynamic,NULL,NULL;Test_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=I2C,24,2048,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;VoltageMeasurem,8,2048,VoltageMeasurement_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=1
@@ -55,6 +55,7 @@ FREERTOS.configMINIMAL_STACK_SIZE=1024
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
 FREERTOS.configTOTAL_HEAP_SIZE=70000
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
+FREERTOS.configUSE_TICKLESS_IDLE=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
@@ -108,7 +109,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -156,11 +156,8 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
-PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC13-ANTI_TAMP.Locked=true
-PC13-ANTI_TAMP.Signal=GPXTI13
+PC13-ANTI_TAMP.Mode=Calibration_512Hz
+PC13-ANTI_TAMP.Signal=RTC_AF1
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
@@ -231,10 +228,10 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=96000000
+RTC.IPParameters=SynchPrediv
+RTC.SynchPrediv=250
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM5.IPParameters=AutoReloadPreload,Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM5.Period=10000 - 1
