--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -66,37 +66,40 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
+Mcu.IP10=USART2
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SYS
-Mcu.IP8=TIM5
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP4=I2C3
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SYS
+Mcu.IP9=TIM5
+Mcu.IPNb=11
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_ADC1_TempSens_Input
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin15=VP_RTC_VS_RTC_Activate
-Mcu.Pin16=VP_RTC_VS_RTC_Calendar
-Mcu.Pin17=VP_SYS_VS_tim11
-Mcu.Pin18=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_ADC1_TempSens_Input
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin19=VP_SYS_VS_tim11
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
-Mcu.Pin9=PA13
-Mcu.PinsNb=19
+Mcu.Pin9=PC9
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -112,6 +115,8 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
 NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
+NVIC.I2C3_ER_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
+NVIC.I2C3_EV_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
@@ -151,6 +156,8 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA8.Mode=I2C
+PA8.Signal=I2C3_SCL
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -164,6 +171,8 @@ PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC9.Mode=I2C
+PC9.Signal=I2C3_SDA
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
@@ -184,7 +193,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=2
+ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
@@ -196,7 +205,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
