--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -46,7 +46,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=0
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark2=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark
-FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;LED_R_Queue,16,LED_QueueMsg_t*,0,Dynamic,NULL,NULL;Test_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;LED_R_Queue,16,LED_QueueMsg_t*,0,Dynamic,NULL,NULL;Test_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=I2C,24,2048,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;VoltageMeasurem,8,2048,VoltageMeasurement_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=1
