Changed values for RTC initialization. Added registers for RTC tuning.

--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -239,6 +239,9 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=96000000
+RTC.AsynchPrediv=0x1F
+RTC.IPParameters=AsynchPrediv,SynchPrediv
+RTC.SynchPrediv=0x03FF
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
