Clean up unused task, adc and timer

--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -1,24 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-2\#ChannelInjectedConversion=ADC_CHANNEL_0
-ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_TEMPSENSOR
-ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
-ADC1.ExternalTrigInjecConv=ADC_INJECTED_SOFTWARE_START
-ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_NONE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,InjectedRank-2\#ChannelInjectedConversion,Channel-2\#ChannelInjectedConversion,SamplingTime-2\#ChannelInjectedConversion,InjectedOffset-2\#ChannelInjectedConversion,InjNumberOfConversion,InjectedRank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,ExternalTrigInjecConv,EOCSelection,ExternalTrigInjecConvEdge,InjectedConvMode
-ADC1.InjNumberOfConversion=2
-ADC1.InjectedConvMode=None
-ADC1.InjectedOffset-2\#ChannelInjectedConversion=0
-ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
-ADC1.InjectedRank-2\#ChannelInjectedConversion=1
-ADC1.InjectedRank-4\#ChannelInjectedConversion=2
-ADC1.NbrOfConversion=1
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-2\#ChannelInjectedConversion=ADC_SAMPLETIME_84CYCLES
-ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_480CYCLES
-ADC1.master=1
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
@@ -47,7 +27,7 @@ FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=0
 FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark2=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark
 FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;LED_R_Queue,16,LED_QueueMsg_t*,0,Dynamic,NULL,NULL;Test_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=I2C,24,2048,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;VoltageMeasurem,8,2048,VoltageMeasurement_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=I2C,24,2048,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configENABLE_BACKWARD_COMPATIBILITY=1
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
@@ -64,48 +44,42 @@ I2C1.OwnAddress=0x40
 I2C1.OwnAddress2=0x41
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP10=USART2
-Mcu.IP2=FREERTOS
-Mcu.IP3=I2C1
-Mcu.IP4=I2C3
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=RTC
-Mcu.IP8=SYS
-Mcu.IP9=TIM5
-Mcu.IPNb=11
+Mcu.IP0=DMA
+Mcu.IP1=FREERTOS
+Mcu.IP2=I2C1
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=RTC
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA8
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_ADC1_TempSens_Input
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
-Mcu.Pin18=VP_RTC_VS_RTC_Calendar
-Mcu.Pin19=VP_SYS_VS_tim11
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin15=VP_RTC_VS_RTC_Activate
+Mcu.Pin16=VP_RTC_VS_RTC_Calendar
+Mcu.Pin17=VP_SYS_VS_tim11
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PC9
-Mcu.PinsNb=21
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PC9
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
-NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -127,11 +101,9 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.TIM5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_TRG_COM_TIM11_IRQn
 NVIC.TimeBaseIP=TIM11
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-PA0-WKUP.Signal=ADCx_IN0
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -205,7 +177,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -242,20 +214,10 @@ RCC.VcooutputI2S=96000000
 RTC.AsynchPrediv=0x1F
 RTC.IPParameters=AsynchPrediv,SynchPrediv
 RTC.SynchPrediv=0x03FF
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM5.IPParameters=AutoReloadPreload,Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
-TIM5.Period=10000 - 1
-TIM5.Prescaler=10000 - 1
-TIM5.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM5.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-VP_ADC1_TempSens_Input.Mode=IN-TempSens
-VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -264,8 +226,6 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_tim11.Mode=TIM11
 VP_SYS_VS_tim11.Signal=SYS_VS_tim11
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
-VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
