--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -42,6 +42,8 @@ I2C1.IPParameters=NoStretchMode,OwnAddress,DualAddressMode,OwnAddress2
 I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
 I2C1.OwnAddress=0x40
 I2C1.OwnAddress2=0x41
+I2C3.I2C_Mode=I2C_Fast
+I2C3.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
@@ -177,7 +179,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
