--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F4
+SH.GPXTI1.0=GPIO_EXTI1
 ProjectManager.MainLocation=Core/Src
 FREERTOS.Queues01=I2C_R_Queue,128,uint16_t,0,Dynamic,NULL,NULL;RTC_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL;Statemachine_R_Queue,16,uint16_t,0,Dynamic,NULL,NULL;LED_R_Queue,16,LED_QueueMsg_t*,0,Dynamic,NULL,NULL;Test_R_Queue,16,Task_Data,0,Dynamic,NULL,NULL
 USART2.IPParameters=VirtualMode
@@ -20,6 +21,7 @@ RCC.RTCFreq_Value=32000
 PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA3.GPIOParameters=GPIO_Label
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+PC1.Locked=true
 PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -36,7 +38,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 Mcu.IP3=I2C3
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-RTC.SynchPrediv=0x03FF
+RTC.SynchPrediv=249
 Mcu.UserConstants=
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 SH.GPXTI13.ConfNb=1
@@ -54,10 +56,10 @@ Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PB6.Mode=I2C
 Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
 RTC.IPParameters=AsynchPrediv,SynchPrediv
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PB10
+Mcu.Pin6=PC1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
 FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark
 FREERTOS.configMINIMAL_STACK_SIZE=1024
 RCC.AHBFreq_Value=100000000
@@ -89,7 +91,7 @@ RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
 File.Version=6
 PC9.Mode=I2C
-RTC.AsynchPrediv=0x1F
+RTC.AsynchPrediv=127
 PB7.Signal=I2C1_SDA
 PA8.Signal=I2C3_SCL
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -135,7 +137,7 @@ I2C3.I2C_Mode=I2C_Fast
 ProjectManager.ProjectFileName=SuperPowerFirmware.ioc
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 FREERTOS.Tasks01=I2C,24,2048,I2C_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 ProjectManager.NoMain=false
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -151,7 +153,7 @@ boardIOC=true
 PH1\ -\ OSC_OUT.Locked=true
 RCC.FamilyName=M
 I2C1.OwnAddress2=0x41
-FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=0
+FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
 PA13.Signal=SYS_JTMS-SWDIO
 PA3.Mode=Asynchronous
@@ -203,6 +205,7 @@ Mcu.IP7=SYS
 ProjectManager.CoupleFile=true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.SYSCLKFreq_VALUE=100000000
+Mcu.Pin20=VP_SYS_VS_tim11
 PA3.Locked=true
 PA5.GPIO_Label=LD2 [Green Led]
 NVIC.ForceEnableDMAVector=true
@@ -215,33 +218,35 @@ PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB7.Mode=I2C
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB7
+Mcu.Pin15=PB6
 Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=PA14
-Mcu.Pin14=PB6
-Mcu.Pin19=VP_SYS_VS_tim11
+Mcu.Pin16=PB7
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA8
-Mcu.Pin12=PA13
+Mcu.Pin11=PC9
+Mcu.Pin12=PA8
 RCC.PLLM=8
 NVIC.I2C3_ER_IRQn=true\:5\:0\:true\:false\:true\:false\:true\:true
 RCC.PLLN=100
-Mcu.Pin10=PC9
+Mcu.Pin10=PB10
 SH.GPXTI10.ConfNb=1
 PA2.Mode=Asynchronous
 PA8.Mode=I2C
 PC9.Signal=I2C3_SDA
+SH.GPXTI1.ConfNb=1
 RCC.APB1Freq_Value=50000000
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
 PC0.Locked=true
 ProjectManager.DeviceId=STM32F411RETx
+PC1.Signal=GPXTI1
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=USART_RX
 isbadioc=false
