--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -36,7 +36,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 Mcu.IP3=I2C3
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-RTC.SynchPrediv=0x03FF
+RTC.SynchPrediv=249
 Mcu.UserConstants=
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 SH.GPXTI13.ConfNb=1
@@ -89,7 +89,7 @@ RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
 File.Version=6
 PC9.Mode=I2C
-RTC.AsynchPrediv=0x1F
+RTC.AsynchPrediv=127
 PB7.Signal=I2C1_SDA
 PA8.Signal=I2C3_SCL
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
@@ -151,7 +151,7 @@ boardIOC=true
 PH1\ -\ OSC_OUT.Locked=true
 RCC.FamilyName=M
 I2C1.OwnAddress2=0x41
-FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=0
+FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
 I2C1.DualAddressMode=I2C_DUALADDRESS_ENABLE
 PA13.Signal=SYS_JTMS-SWDIO
 PA3.Mode=Asynchronous
