Changed the name of the PC13 pin to BL_Trigger. This pin signals that the RPi has shut down when used with the correct dtoverlay

--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -137,7 +137,7 @@ Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 FREERTOS.Tasks01=Display,24,2048,Display_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
 Mcu.PinsNb=20
 ProjectManager.NoMain=false
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
+PC13-ANTI_TAMP.GPIO_Label=BL_Trigger
 NVIC.SavedSvcallIrqHandlerGenerated=true
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 ProjectManager.DefaultFWLocation=true
