--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -58,7 +58,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PB10
-FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark
+FREERTOS.IPParameters=Tasks01,FootprintOK,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_STATS_FORMATTING_FUNCTIONS,configENABLE_BACKWARD_COMPATIBILITY,INCLUDE_uxTaskGetStackHighWaterMark2,INCLUDE_uxTaskGetStackHighWaterMark,configUSE_TICKLESS_IDLE
 FREERTOS.configMINIMAL_STACK_SIZE=1024
 RCC.AHBFreq_Value=100000000
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -97,7 +97,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true
 Dma.RequestsNb=2
 ProjectManager.HalAssertFull=false
-FREERTOS.configTOTAL_HEAP_SIZE=70000
+FREERTOS.configTOTAL_HEAP_SIZE=50000
 ProjectManager.ProjectName=SuperPowerFirmware
 RCC.FLatency-AdvancedSettings=FLASH_LATENCY_3
 PA13.GPIOParameters=GPIO_Label
@@ -140,6 +140,7 @@ ProjectManager.NoMain=false
 PC13-ANTI_TAMP.GPIO_Label=BL_Trigger
 NVIC.SavedSvcallIrqHandlerGenerated=true
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
+FREERTOS.configUSE_TICKLESS_IDLE=1
 ProjectManager.DefaultFWLocation=true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 ProjectManager.DeletePrevious=true
