Integration of Tracealyzer
the integration is configured to sen the trace via the ITM port 1 with
the streaming mode enabled, this integration only works when the
stlink is connected directly to the device running the Tracealizer
software.

--- a/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
+++ b/firmware/SuperPowerFirmware/SuperPowerFirmware.ioc
@@ -76,6 +76,7 @@ NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 RCC.HSE_VALUE=8000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+PB3.Mode=Trace_Asynchronous_SW
 Dma.I2C1_RX.0.Mode=DMA_CIRCULAR
 PC13-ANTI_TAMP.Signal=GPXTI13
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true
@@ -86,7 +87,7 @@ MxDb.Version=DB.6.0.21
 I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
 ProjectManager.BackupPrevious=true
 RCC.VCOInputFreq_Value=2000000
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 File.Version=6
 PC9.Mode=I2C
 RTC.AsynchPrediv=127
@@ -135,7 +136,7 @@ I2C3.I2C_Mode=I2C_Fast
 ProjectManager.ProjectFileName=SuperPowerFirmware.ioc
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 FREERTOS.Tasks01=Display,24,2048,Display_Task,Default,NULL,Dynamic,NULL,NULL;RTC,8,2048,RTC_Task,Default,NULL,Dynamic,NULL,NULL;StateMachine,8,2048,StateMachine_Task,Default,NULL,Dynamic,NULL,NULL;LED,8,2048,LED_Task,Default,NULL,Dynamic,NULL,NULL;Test,8,1024,Test_Task,Default,NULL,Dynamic,NULL,NULL
-Mcu.PinsNb=20
+Mcu.PinsNb=21
 ProjectManager.NoMain=false
 PC13-ANTI_TAMP.GPIO_Label=BL_Trigger
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -184,7 +185,7 @@ Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
 RCC.EthernetFreq_Value=100000000
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
@@ -203,7 +204,9 @@ Mcu.IP6=RTC
 Mcu.IP7=SYS
 ProjectManager.CoupleFile=true
 RCC.48MHZClocksFreq_Value=50000000
+PB3.Signal=SYS_JTDO-SWO
 RCC.SYSCLKFreq_VALUE=100000000
+Mcu.Pin20=VP_SYS_VS_tim11
 PA3.Locked=true
 PA5.GPIO_Label=LD2 [Green Led]
 NVIC.ForceEnableDMAVector=true
@@ -216,18 +219,18 @@ PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB7.Mode=I2C
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB7
+Mcu.Pin15=PB6
 Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin16=PB7
 Mcu.Pin13=PA14
-Mcu.Pin14=PB6
-Mcu.Pin19=VP_SYS_VS_tim11
+Mcu.Pin14=PB3
+Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PA8
 Mcu.Pin12=PA13
@@ -243,6 +246,6 @@ RCC.APB1Freq_Value=50000000
 Dma.I2C1_RX.0.Instance=DMA1_Stream0
 PC0.Locked=true
 ProjectManager.DeviceId=STM32F411RETx
-ProjectManager.LibraryCopy=2
+ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=USART_RX
 isbadioc=false
